--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,3 +8,7 @@ spring:
   data:
     mongodb:
       uri: mongodb://localhost:27017/users
+
+logging:
+  level:
+    com.chatterbox.userservice: INFO
